--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,21 +1,18 @@
 name: muse_ai
-description: Integrating with MUSE.ai
-version: 0.4.4
 author: ericmartineau
-
-environment:
-  sdk: ">=2.7.0 <3.0.0"
-  flutter: ">=1.17.0"
-
-dependencies:
+version: 0.4.4+1
+description: Integrating with MUSE.ai
+environment: 
+  sdk: '>=2.7.0 <3.0.0'
+  flutter: '>=1.17.0'
+dependencies: 
   pedantic: ^1.9.2
   dio: ^3.0.10
-  flutter:
+  flutter: 
     sdk: flutter
-dev_dependencies:
-  flutter_test:
+dev_dependencies: 
+  flutter_test: 
     sdk: flutter
-
-dependency_overrides:
-  dio:
+dependency_overrides: 
+  dio: 
     path: ../dio/dio
