--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -11,7 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  chewie: ^0.12.1+1
   muse_ai:
     # When depending on this package from a real application you should use:
     #   muse_ai: ^x.y.z
