--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: muse_ai
-version: 0.4.4+4
+version: 0.4.4+5
 description: Integrating with MUSE.ai
 repository: https://github.com/SunnyApp/muse_ai
+homepage: https://github.com/SunnyApp/muse_ai
 environment: 
   sdk: '>=2.7.0 <3.0.0'
   flutter: '>=1.17.0'
