--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -6,12 +6,12 @@ description: Demonstrates how to use the muse_ai plugin.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  chewie: ^0.12.1+1
+  chewie: ^1.0.0
   muse_ai:
     # When depending on this package from a real application you should use:
     #   muse_ai: ^x.y.z
@@ -22,7 +22,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.1
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
